Access SRA data

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -2,27 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7789952e",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "c61cfa2a",
    "metadata": {},
    "source": [
     "1. Install AWS CLI:\n",
-    "        ```\n",
-    "        $ curl \"https://awscli.amazonaws.com/AWSCLIV2.pkg\" -o \"AWSCLIV2.pkg\"\n",
-    "        $ sudo installer -pkg AWSCLIV2.pkg -target /\n",
-    "        ```\n",
-    "2. Get the SRR IDs by following the instructions [here](https://github.com/asadprodhan/A-Guide-to-Automatically-Downloading-NCBI-SRA-Reads?tab=readme-ov-file#step-2-collect-sra-accession-numbers)\n"
+    "```\n",
+    "$ curl \"https://awscli.amazonaws.com/AWSCLIV2.pkg\" -o \"AWSCLIV2.pkg\" \\n\n",
+    "$ sudo installer -pkg AWSCLIV2.pkg -target /\n",
+    "```\n",
+    "2. Get the SRR IDs by following the instructions [here](https://github.com/asadprodhan/A-Guide-to-Automatically-Downloading-NCBI-SRA-Reads?tab=readme-ov-file#step-2-collect-sra-accession-numbers). (Also stored under data/srr_acc_list.txt)\n",
+    "3. Install python requirements:     \n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5637f78d",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03d6f1a5",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": []
   }
  ],
