Update command to run availability script

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -11,7 +11,9 @@
     "$ sudo installer -pkg AWSCLIV2.pkg -target /\n",
     "```\n",
     "2. Get the SRR IDs by following the instructions [here](https://github.com/asadprodhan/A-Guide-to-Automatically-Downloading-NCBI-SRA-Reads?tab=readme-ov-file#step-2-collect-sra-accession-numbers). (Also stored under data/srr_acc_list.txt)\n",
-    "3. Install python requirements:     \n"
+    "3. Install python requirements: `pip3 install -r requirements.txt`\n",
+    "4. Check availability of SRR data: `python3 scripts/check_aws_availability.py`\n",
+    "5. \n"
    ]
   },
   {
