Add instructions for creating EC2 instance

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -5,28 +5,89 @@
    "id": "c61cfa2a",
    "metadata": {},
    "source": [
+    "## Park 1. Checking data availability\n",
+    "\n",
     "1. Install AWS CLI:\n",
     "```\n",
     "$ curl \"https://awscli.amazonaws.com/AWSCLIV2.pkg\" -o \"AWSCLIV2.pkg\" \\n\n",
     "$ sudo installer -pkg AWSCLIV2.pkg -target /\n",
     "```\n",
-    "2. Get the SRR IDs by following the instructions [here](https://github.com/asadprodhan/A-Guide-to-Automatically-Downloading-NCBI-SRA-Reads?tab=readme-ov-file#step-2-collect-sra-accession-numbers). (Also stored under data/srr_acc_list.txt)\n",
+    "2. Get the SRR IDs by following the instructions [here](https://github.com/asadprodhan/A-Guide-to-Automatically-Downloading-NCBI-SRA-Reads?tab=readme-ov-file#step-2-collect-sra-accession-numbers). (Also stored under `data/srr_acc_list.txt`)\n",
     "3. Install python requirements: `pip3 install -r requirements.txt`\n",
-    "4. Check availability of SRR data: `python3 scripts/check_aws_availability.py`\n",
-    "5. \n"
+    "4. Check availability of SRR data: `python3 scripts/check_aws_availability.py`"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03d6f1a5",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "7531d324",
+   "metadata": {},
+   "source": [
+    "## **Part 2: Setting up Amazon EC2 instance**\n",
+    "\n",
+    "## **Launch EC2 Instance from Console**\n",
+    "\n",
+    "### **Step 1: Go to EC2**\n",
+    "- Sign in to AWS Console\n",
+    "- Search for \"EC2\" in the top search bar\n",
+    "- Click \"EC2\"\n",
+    "\n",
+    "### **Step 2: Launch Instance**\n",
+    "- Click the orange \"Launch instance\" button\n",
+    "\n",
+    "### **Step 3: Configure Instance**\n",
+    "\n",
+    "**Name:**\n",
+    "- Enter: `mgs-download`\n",
+    "\n",
+    "**Application and OS Images (AMI):**\n",
+    "- Select \"Ubuntu Server 22.04 LTS\"\n",
+    "- Make sure it says \"Free tier eligible\"\n",
+    "\n",
+    "**Instance type:**\n",
+    "- Select `t3.large` from the dropdown\n",
+    "\n",
+    "**Key pair:**\n",
+    "- Click \"Create new key pair\"\n",
+    "- Name: `mgs-key`\n",
+    "- Key pair type: RSA\n",
+    "- Private key file format: `.pem`\n",
+    "- Click \"Create key pair\"\n",
+    "- **Save the downloaded file somewhere safe**\n",
+    "\n",
+    "**Network settings:**\n",
+    "- Leave defaults (should auto-create security group with SSH access)\n",
+    "\n",
+    "**Configure storage:**\n",
+    "- Change from `8` GB to `500` GB\n",
+    "- Leave type as \"gp3\"\n",
+    "\n",
+    "### **Step 4: Launch**\n",
+    "- Click \"Launch instance\" (orange button at bottom right)\n",
+    "- Wait 2-3 minutes for instance to start\n",
+    "\n",
+    "### **Step 5: Set Reminder to Terminate (IMPORTANT)**\n",
+    "**Before continuing, set an reminder to terminate EC2 instance, otherwise you will get surprised by a high bill**\n",
+    "\n",
+    "### **Step 6: Get Connection Info**\n",
+    "- Click \"View all instances\"\n",
+    "- Find your `mgs-download` instance\n",
+    "- Wait until \"Instance state\" shows \"Running\"\n",
+    "- Click on the instance ID\n",
+    "- Copy the \"Public IPv4 address\" (looks like `3.123.45.67`)\n",
+    "\n",
+    "### **Step 7: Connect from Your Terminal**\n",
+    "\n",
+    "```bash\n",
+    "# Navigate to where you saved mgs-key.pem\n",
+    "cd ~/Downloads  # or wherever you saved it\n",
+    "\n",
+    "# Make key secure\n",
+    "chmod 400 mgs-key.pem\n",
+    "\n",
+    "# SSH in (replace with your actual IP)\n",
+    "ssh -i mgs-key.pem ubuntu@3.123.45.67\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
