Add SRA toolkit instructions

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -88,6 +88,51 @@
     "ssh -i mgs-key.pem ubuntu@3.123.45.67\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7349bd6",
+   "metadata": {},
+   "source": [
+    "## **Part 2: Install SRA Toolkit on EC2**\n",
+    "\n",
+    "### **Step 1: Update Package Manager**\n",
+    "\n",
+    "```bash\n",
+    "sudo apt update\n",
+    "```\n",
+    "\n",
+    "### **Step 2: Install SRA Toolkit**\n",
+    "\n",
+    "```bash\n",
+    "sudo apt install sra-toolkit -y\n",
+    "```\n",
+    "\n",
+    "### **Step 3: Verify Installation**\n",
+    "\n",
+    "```bash\n",
+    "fastq-dump --version\n",
+    "```\n",
+    "\n",
+    "Should show version number (e.g., `fastq-dump : 2.11.0`).\n",
+    "\n",
+    "### **Step 4: Configure SRA Toolkit**\n",
+    "\n",
+    "```bash\n",
+    "vdb-config --interactive\n",
+    "```\n",
+    "\n",
+    "This opens a text-based GUI. Use arrow keys and Enter to navigate:\n",
+    "\n",
+    "1. Press `TAB` to move between sections\n",
+    "2. Navigate to \"CACHE\" tab\n",
+    "3. Enable \"local file-caching\" (if not already enabled)\n",
+    "4. Set cache location to `/home/ubuntu/ncbi/public` (or leave default)\n",
+    "5. Navigate to \"AWS\" tab  \n",
+    "6. **Disable** \"report cloud instance identity\" (uncheck it)\n",
+    "7. Press `S` to Save\n",
+    "8. Press `X` to Exit\n"
+   ]
   }
  ],
  "metadata": {
