Add instructions for cloning git repo

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -133,6 +133,38 @@
     "7. Press `S` to Save\n",
     "8. Press `X` to Exit\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9347053f",
+   "metadata": {},
+   "source": [
+    "## **Part 3:Add Git Repo to EC2 Instance**\n",
+    "\n",
+    "### **Step 1: Install Git**\n",
+    "\n",
+    "```bash\n",
+    "sudo apt install git -y\n",
+    "```\n",
+    "\n",
+    "### **Step 2: Clone Your Repository**\n",
+    "\n",
+    "```bash\n",
+    "git clone https://github.com/farhanazam98/metagenomic-sequencing-exercise.git\n",
+    "```\n",
+    "\n",
+    "### **Step 3: Navigate to Project**\n",
+    "\n",
+    "```bash\n",
+    "cd metagenomic-sequencing-exercise\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68653e9b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
