Update download script + remove download verification script

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -164,7 +164,97 @@
    "cell_type": "markdown",
    "id": "68653e9b",
    "metadata": {},
-   "source": []
+   "source": [
+    "## **Part 4:Download SRA Files**\n",
+    "\n",
+    "### **Background: What These Commands Do**\n",
+    "\n",
+    "**fasterq-dump:**\n",
+    "- Tool that downloads and converts SRA files to FASTQ format\n",
+    "- Multi-threaded (faster than old `fastq-dump`)\n",
+    "- Gets data from NCBI's servers\n",
+    "\n",
+    "**--split-files:**\n",
+    "- Separates paired-end reads into two files\n",
+    "- Creates `_1.fastq` (forward reads) and `_2.fastq` (reverse reads)\n",
+    "- Required for paired-end data\n",
+    "\n",
+    "**FASTQ format:**\n",
+    "- Standard text format for storing sequencing reads\n",
+    "- Contains: sequence + quality scores\n",
+    "- One read = 4 lines (ID, sequence, +, quality)\n",
+    "\n",
+    "**gzip:**\n",
+    "- Compresses files to save space (~5× smaller)\n",
+    "- `.fastq.gz` files can still be read by analysis tools\n",
+    "- Essential when working with large datasets\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Step 1: Make Script Executable**\n",
+    "\n",
+    "```bash\n",
+    "chmod +x scripts/download_sra.sh\n",
+    "```\n",
+    "\n",
+    "### **Step 2: Run the Download**\n",
+    "\n",
+    "```bash\n",
+    "./scripts/download_sra.sh\n",
+    "```\n",
+    "\n",
+    "**Time estimate:** 1-2 hours for all 18 samples\n",
+    "\n",
+    "### **Step 3: Verify Downloads**\n",
+    "\n",
+    "```bash\n",
+    "ls -lh data/raw/fastq/\n",
+    "```\n",
+    "\n",
+    "You should see 36 files (18 samples × 2 files each), all ending in `.fastq.gz`\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Downloads will be saved to** `data/raw/fastq/` directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c4d28d4",
+   "metadata": {},
+   "source": [
+    "## **Part 5: Install Python Dependencies and Run Check Script**\n",
+    "\n",
+    "### **Step 1: Install pip (Python package manager)**\n",
+    "\n",
+    "```bash\n",
+    "sudo apt install python3-pip -y\n",
+    "```\n",
+    "\n",
+    "### **Step 2: Install Required Python Packages**\n",
+    "\n",
+    "```bash\n",
+    "pip3 install pandas tqdm\n",
+    "```\n",
+    "\n",
+    "**What these do:**\n",
+    "- `pandas` - reads CSV files and data manipulation\n",
+    "- `tqdm` - progress bars for loops\n",
+    "\n",
+    "### **Step 3: Run the Check Script**\n",
+    "\n",
+    "```bash\n",
+    "python3 scripts/check_downloads.py\n",
+    "```\n",
+    "\n",
+    "**Expected output:**\n",
+    "- Lists each SRR as \"Found\" or \"Not found\"\n",
+    "- Shows summary: Downloaded / Missing / Total\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**If all show \"Not found\"** - that's expected if you haven't downloaded anything yet."
+   ]
   }
  ],
  "metadata": {
