Update workflow instructions

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c61cfa2a",
-   "metadata": {},
-   "source": [
-    "## Park 1. Checking data availability\n",
-    "\n",
-    "1. Install AWS CLI:\n",
-    "```\n",
-    "$ curl \"https://awscli.amazonaws.com/AWSCLIV2.pkg\" -o \"AWSCLIV2.pkg\" \\n\n",
-    "$ sudo installer -pkg AWSCLIV2.pkg -target /\n",
-    "```\n",
-    "2. Get the SRR IDs by following the instructions [here](https://github.com/asadprodhan/A-Guide-to-Automatically-Downloading-NCBI-SRA-Reads?tab=readme-ov-file#step-2-collect-sra-accession-numbers). (Also stored under `data/srr_acc_list.txt`)\n",
-    "3. Install python requirements: `pip3 install -r requirements.txt`\n",
-    "4. Check availability of SRR data: `python3 scripts/check_aws_availability.py`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7531d324",
    "metadata": {},
    "source": [
-    "## **Part 2: Setting up Amazon EC2 instance**\n",
+    "## Part 1: Setting up Amazon EC2 instance\n",
     "\n",
     "## **Launch EC2 Instance from Console**\n",
     "\n",
@@ -86,7 +69,7 @@
     "\n",
     "# SSH in (replace with your actual IP)\n",
     "ssh -i mgs-key.pem ubuntu@3.123.45.67\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -94,21 +77,21 @@
    "id": "c7349bd6",
    "metadata": {},
    "source": [
-    "## **Part 2: Install SRA Toolkit on EC2**\n",
+    "## Part 2: Install SRA Toolkit on EC2\n",
     "\n",
-    "### **Step 1: Update Package Manager**\n",
+    "### Step 1: Update Package Manager\n",
     "\n",
     "```bash\n",
     "sudo apt update\n",
     "```\n",
     "\n",
-    "### **Step 2: Install SRA Toolkit**\n",
+    "### Step 2: Install SRA Toolkit\n",
     "\n",
     "```bash\n",
     "sudo apt install sra-toolkit -y\n",
     "```\n",
     "\n",
-    "### **Step 3: Verify Installation**\n",
+    "### Step 3: Verify Installation\n",
     "\n",
     "```bash\n",
     "fastq-dump --version\n",
@@ -116,7 +99,7 @@
     "\n",
     "Should show version number (e.g., `fastq-dump : 2.11.0`).\n",
     "\n",
-    "### **Step 4: Configure SRA Toolkit**\n",
+    "### Step 4: Configure SRA Toolkit\n",
     "\n",
     "```bash\n",
     "vdb-config --interactive\n",
@@ -139,25 +122,25 @@
    "id": "9347053f",
    "metadata": {},
    "source": [
-    "## **Part 3:Add Git Repo to EC2 Instance**\n",
+    "## Part 3: Add Git repo to EC2 instance\n",
     "\n",
-    "### **Step 1: Install Git**\n",
+    "### Step 1: Install Git (if not already installed)\n",
     "\n",
     "```bash\n",
     "sudo apt install git -y\n",
     "```\n",
     "\n",
-    "### **Step 2: Clone Your Repository**\n",
+    "### Step 2: Clone Your Repository\n",
     "\n",
     "```bash\n",
     "git clone https://github.com/farhanazam98/metagenomic-sequencing-exercise.git\n",
     "```\n",
     "\n",
-    "### **Step 3: Navigate to Project**\n",
+    "### Step 3: Navigate to Project\n",
     "\n",
     "```bash\n",
     "cd metagenomic-sequencing-exercise\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -165,9 +148,9 @@
    "id": "68653e9b",
    "metadata": {},
    "source": [
-    "## **Part 4:Download SRA Files**\n",
+    "## Part 4: Download SRA files\n",
     "\n",
-    "### **Background: What These Commands Do**\n",
+    "### Background: What These Commands Do\n",
     "\n",
     "**fasterq-dump:**\n",
     "- Tool that downloads and converts SRA files to FASTQ format\n",
@@ -191,21 +174,15 @@
     "\n",
     "---\n",
     "\n",
-    "### **Step 1: Make Script Executable**\n",
+    "### Step 1: Run the script\n",
     "\n",
     "```bash\n",
-    "chmod +x scripts/download_sra.sh\n",
-    "```\n",
-    "\n",
-    "### **Step 2: Run the Download**\n",
-    "\n",
-    "```bash\n",
-    "./scripts/download_sra.sh\n",
+    "python3 ./scripts/download_sra.py\n",
     "```\n",
     "\n",
     "**Time estimate:** 1-2 hours for all 18 samples\n",
     "\n",
-    "### **Step 3: Verify Downloads**\n",
+    "### Step 2: Verify Downloads\n",
     "\n",
     "```bash\n",
     "ls -lh data/raw/fastq/\n",
@@ -215,45 +192,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Downloads will be saved to** `data/raw/fastq/` directory."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7c4d28d4",
-   "metadata": {},
-   "source": [
-    "## **Part 5: Install Python Dependencies and Run Check Script**\n",
-    "\n",
-    "### **Step 1: Install pip (Python package manager)**\n",
-    "\n",
-    "```bash\n",
-    "sudo apt install python3-pip -y\n",
-    "```\n",
-    "\n",
-    "### **Step 2: Install Required Python Packages**\n",
-    "\n",
-    "```bash\n",
-    "pip3 install pandas tqdm\n",
-    "```\n",
-    "\n",
-    "**What these do:**\n",
-    "- `pandas` - reads CSV files and data manipulation\n",
-    "- `tqdm` - progress bars for loops\n",
-    "\n",
-    "### **Step 3: Run the Check Script**\n",
-    "\n",
-    "```bash\n",
-    "python3 scripts/check_downloads.py\n",
-    "```\n",
-    "\n",
-    "**Expected output:**\n",
-    "- Lists each SRR as \"Found\" or \"Not found\"\n",
-    "- Shows summary: Downloaded / Missing / Total\n",
-    "\n",
-    "---\n",
-    "\n",
-    "**If all show \"Not found\"** - that's expected if you haven't downloaded anything yet."
+    "**Downloads will be saved to** `data/raw/fastq/` directory.\n"
    ]
   }
  ],
