Update repo references after rename to sra-batch-downloader

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -130,7 +130,7 @@
     "sudo apt install git -y\n",
     "```\n",
     "\n",
-    "### Step 2: Clone Your Repository\n",
+    "### Step 2: Clone The Repository\n",
     "\n",
     "```bash\n",
     "git clone https://github.com/farhanazam98/metagenomic-sequencing-exercise.git\n",
