Update workflow instriuctions with setup script

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -112,7 +112,7 @@
     "3. Enable \"local file-caching\" (if not already enabled)\n",
     "4. Set cache location to `/home/ubuntu/ncbi/public` (or leave default)\n",
     "5. Navigate to \"AWS\" tab  \n",
-    "6. **Disable** \"report cloud instance identity\" (uncheck it)\n",
+    "6. **Enable** \"report cloud instance identity\" (check it)\n",
     "7. Press `S` to Save\n",
     "8. Press `X` to Exit\n"
    ]
@@ -173,11 +173,19 @@
     "- Essential when working with large datasets\n",
     "\n",
     "---\n",
-    "\n",
-    "### Step 1: Run the script\n",
+    "### Step 1: Install dependencies\n",
     "\n",
     "```bash\n",
-    "python3 ./scripts/download_sra.py\n",
+    "chmod +x scripts/setup_dependencies.sh\n",
+    "```\n",
+    "Followed by \n",
+    "```bash\n",
+    "./scripts/setup_dependencies.sh\n",
+    "```\n",
+    "### Step 2: Run the download \n",
+    "\n",
+    "```bash\n",
+    "python3 scripts/download_sra.py\n",
     "```\n",
     "\n",
     "**Time estimate:** 1-2 hours for all 18 samples\n",
@@ -194,6 +202,24 @@
     "\n",
     "**Downloads will be saved to** `data/raw/fastq/` directory.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3aed2cc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18b05836",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46044e1e",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
